--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "bcrypt": "^5.0.0",
     "ejs": "^3.1.5",
     "express": "^4.17.1",
+    "jose": "^3.5.1",
     "jsonwebtoken": "^8.5.1",
     "mysql": "^2.18.1"
   },
